Added the Phase 2 files/updates
I did it correctly this time :D

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,6 @@ header, nav, main, footer { display: block; } /*sets those html elements as a bl
 
 body {
 	background-image: url(../images/lavender_background.png); /*Background image made by gemini and gpt*/
-	background-repeat: no-repeat;
 	background-color: #41264F;
 	font-family: Verdana, Arial, sans-serif;
 }
@@ -52,11 +51,36 @@ main img{
 	float: right;
 }
 
+/*Paragraph Styles*/
 p{
 	text-align: center;
 	width: 600px;
 }
 
+p a:link {color: #000;}
+p a:visited{color: #cc60c1;}
+p a:hover {color: #d224ed;}
+
+/*Descriptive List Styles*/
+dl{
+	width: 600px;
+}
+
+dl dt{
+	font-size: 1.2em;
+	font-weight: bold;
+	padding: 10px;
+}
+
+dl dd{
+	padding: 10px;
+}
+
+dd a:link {color: #000;}
+dd a:visited{color: #cc60c1;}
+dd a:hover {color: #d224ed;}
+
+/*Footer Styles*/
 footer { 
 	background-color: #d8bee6;
 	margin-left: 0px;
@@ -65,3 +89,7 @@ footer {
 	font-size: small;
 	font-style: italic;
 }
+
+footer a:link {color: #000;}
+footer a:visited{color: #cc60c1;}
+footer a:hover {color: #d224ed;}
