--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,13 +6,6 @@ body {
 	font-family: Verdana, Arial, sans-serif;
 }
 
-/*ID Styles*/
-#wrapper { 
-	width: 80%;
-	margin: auto;
-	box-shadow: 5px 5px 5px #000000;
-}
-
 /*Heading Styles*/
 h1 { 
 	background-repeat: no-repeat;
@@ -26,8 +19,15 @@ h1 {
 	margin-bottom: 0;
 }
 
+h2, h4 {
+	text-align: center;
+	padding: 0 0 2px 0;
+}
+
 /*Nav Styles*/
-nav { 
+nav {
+	position:sticky;
+	top: 0;
 	padding: 10px 0;
 	text-align: center;
 	background-color: #edc2e9;
@@ -41,8 +41,8 @@ nav a:hover {color: #d224ed;}
 
 /*Main Styles*/
 main{
-	background-color: #d8bee6;
     margin-left: 0px;
+	background-color: #d8bee6;
     padding: 1px 20px 20px 20px;   
 	min-height: 300px;
 }
@@ -54,12 +54,20 @@ main img{
 /*Paragraph Styles*/
 p{
 	text-align: center;
-	width: 600px;
+	width: 100%;
 }
 
 p a:link {color: #000;}
 p a:visited{color: #cc60c1;}
 p a:hover {color: #d224ed;}
+
+p img{
+	min-width:300px;
+	max-width:500px;
+	min-height:200px;
+	max-height:400px;
+	padding:35px 35px;
+}
 
 /*Descriptive List Styles*/
 dl{
@@ -80,6 +88,8 @@ dd a:link {color: #000;}
 dd a:visited{color: #cc60c1;}
 dd a:hover {color: #d224ed;}
 
+ul {list-style-type: none;}
+
 /*Footer Styles*/
 footer { 
 	background-color: #d8bee6;
@@ -93,3 +103,17 @@ footer {
 footer a:link {color: #000;}
 footer a:visited{color: #cc60c1;}
 footer a:hover {color: #d224ed;}
+
+/*ID Styles*/
+#wrapper { 
+	width: 80%;
+	margin: auto;
+	box-shadow: 5px 5px 5px #000000;
+}
+
+#image-middle-header {
+	display:flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
